<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_units"
        android:icon="@drawable/baseline_unit_48"
        android:title="@string/units_title" />
    <item
        android:id="@+id/menu_soldiers"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/soldiers_title" />
    <item
        android:id="@+id/menu_notes"
        android:icon="@drawable/baseline_note_add_24"
        android:title="@string/notes_title" />
    <item
        android:id="@+id/menu_unit_logs"
        android:icon="@drawable/baseline_list_24"
        android:title="@string/unit_logs_title" />
    <item
        android:id="@+id/menu_leave_requests"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/leave_requests_title" />
    <item
        android:id="@+id/menu_discipline"
        android:icon="@drawable/outline_disciplinary_24"
        android:title="@string/disc_notices_title" />
    <!--item
        android:id="@+id/menu_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_title"
        android:visibility="invisible" /-->
</menu>