<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding"
    tools:context=".view.SoldierAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/olive"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <EditText
        android:id="@+id/txt_mp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/soldier_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:minEms="10" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/soldier_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:minEms="10" />

    <AutoCompleteTextView
        android:id="@+id/txt_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/soldier_role"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:minEms="10" />

    <AutoCompleteTextView
        android:id="@+id/txt_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/soldier_rank"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:minEms="10" />

    <Spinner
        android:id="@+id/spn_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:prompt="@string/soldier_unit"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_height="wrap_content"
        android:onClick="btnAddClick"
        android:text="@string/add" />
</LinearLayout>