<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".view.DisciplineAddUpdateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/olive"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spn_soldiers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:minHeight="48dp"
                android:prompt="@string/disc_soldier"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:hint="@string/disc_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:gravity="start|center_vertical"
                android:minHeight="48dp"
                android:onClick="txtDateClick"
                android:text="@string/disc_date"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:gravity="start|top"
                android:hint="@string/disc_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="96dp" />

            <EditText
                android:id="@+id/txt_punishment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:gravity="start|top"
                android:hint="@string/disc_punishment"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="96dp" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:drawableEnd="@drawable/baseline_add_circle_24"
                    android:onClick="btnAddUpdateClick"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/btn_update"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:drawableEnd="@drawable/baseline_edit_24"
                    android:onClick="btnAddUpdateClick"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/btn_copy"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:drawableEnd="@drawable/baseline_content_copy_24"
                    android:onClick="btnCopyClick"
                    android:text="@string/copy" />

                <Button
                    android:id="@+id/btn_delete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/baseline_delete_forever_24"
                    android:onClick="btnDeleteClick"
                    android:text="@string/delete" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>